# LinkEcho

./: Cargo.toml  README-en.md  README.md  build.rs
assets/: LinkEcho-manifest.rc  logo.rc
libs/restart_explorer/: Cargo.toml  LICENSE
libs/restart_explorer/src/: lib.rs
libs/restart_explorer/src/core/operations/: explorer.rs  location.rs  mod.rs  process.rs  shell_view.rs  window.rs
libs/restart_explorer/src/data/: window.rs
libs/restart_explorer/src/infrastructure/: mod.rs
libs/restart_explorer/src/infrastructure/windows_os/: enum_variant.rs  mod.rs  persist_id_list.rs  shell_item.rs  shell_view.rs  shell_windows.rs  windows_api.rs
lnk-rs/src/: linkinfo.rs
locales/: app.yaml  language.rs
src/: config.rs  desktop_config.rs  icongen.rs  index.html  info.rs  info_lnk.rs  info_parselnk.rs  info_powershell.rs  language.rs  link_info.rs  link_list.rs  main.rs  manifest.xml  modify.rs  restart_explorer.ps1  tui.rs  utils.rs
src/components/: about.rs  components.rs  head.css  header.rs  help.rs  history.rs  home.rs  log.rs  mod.rs  modify.css  msgbox.css  msgbox.rs  properties.css  properties.rs  status.rs  tabs.rs  tools.rs
src/components/about/: about.rs
src/components/css/: about.css  header.css  header_window_buttons.css  help.css  history.css  home_icon.css  home_modify.css  log.css  msgbox.css  status.css  tabs.css  tools.css
src/components/header/: header.rs
src/components/history/: history.rs
src/components/home/: home.rs  modify.css
src/components/msgbox/: mod.rs  msgbox.rs
src/components/properties/: properties.css  properties.rs
src/components/status/: status.css  status.rs
src/components/tabs/: tab.css  tabs.rs
src/components/tools/: tools.rs
src/image/: background.rs  base64.rs  icongen.rs  mod.rs  rounded_corners.rs
src/link/: info.rs  link_info.rs  link_list.rs  link_modify.rs  list.rs  mod.rs  modify.rs  utils.rs
src/scripts/: clear_icon_cache.rs  cli.rs  editpe.rs  mod.rs
