[package]
name = "LinkEcho"
version = "1.0.0"
edition = "2024"
authors = ["iKineticate"]
license = "MIT License"
description = "change the icon of shortcuts in batches as they wish"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
winsafe = { version = "0.0.23", features = ["advapi", "shell"] } # Windows's API
windows-icons = "0.2.1" # 获取文件图标
glob = "0.3.2" # 遍历文件夹
rfd = "0.15.2" # 选择文件夹
opener = "0.7.2" # 打开文件(夹)
chrono = "0.4.40" # 获取系统时间
win-toast-notify = "0.1.5"
rust-i18n = "3.1.3" # 国际化文本
anyhow = "1.0.96" # 错误处理
base64 = "0.22.1" # 图像转码
editpe = "0.2.1" # 修改可执行程序图标
# 以下是图标转换库相关库
image = "0.25.5"
rayon = "1.10.0"
resvg = "0.45.0"
usvg = "0.45.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_Globalization",
]

[build-dependencies]
embed-resource = "3.0.1" # 载入清单

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"
