[package]
name = "LinkEcho"
version = "1.0.0"
edition = "2024"
authors = ["iKineticate"]
license = "MIT License"
description = "Batch change or customize shortcut icons as you wish"
homepage = "https://github.com/iKineticate/LinkEcho"
repository = "https://github.com/iKineticate/LinkEcho"
keywords = ["shortcut", "icon", "link", "change", "restore", "customize", "replace", "modify"]

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
winsafe = { version = "0.0.23", features = ["advapi", "shell"] } # Windows's API
windows-icons = "0.3" # 获取文件图标
glob = "0.3" # 遍历文件夹
rfd = "0.15" # 选择文件夹
opener = "0.7" # 打开文件(夹)
chrono = "0.4" # 获取系统时间
tauri-winrt-notification = "0.7"
rust-i18n = "3" # 国际化文本
anyhow = "1" # 错误处理
editpe = "0.2" # 修改可执行程序图标
csscolorparser = "0.7" # CSS颜色解析
regex = "1.11" # 正则表达式
log = "0.4" # 日志

fern = "0.7" # 记录日志至文件
restart-explorer = { path = "libs/restart_explorer" } # 重启资源管理器
# 以下是图标转换相关库
image = "0.25"
base64 = "0.22"
rayon = "1.10.0"
resvg = "0.45.0"
usvg = "0.45.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Globalization",
    "Win32_System_Com",
]

[build-dependencies]
embed-resource = "3" # 载入清单

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
