[package]
name = "restart-explorer"
version = "1.0.0"
authors = ["P. Michalewicz <piotr.a.michalewicz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {  version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Variant",
] }
windows-core = "0.58.0"

[[test]]
name = "restart-explorer-tests"
path = "./tests/entry.rs"
